--- a/Demo/ZerraDemo.Domain.Ledger1.EventStore/ZerraDemo.Domain.Ledger1.EventStore.csproj
+++ b/Demo/ZerraDemo.Domain.Ledger1.EventStore/ZerraDemo.Domain.Ledger1.EventStore.csproj
@@ -5,10 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Framework\Zerra.Repository.EventStore.EventStoreDB\Zerra.Repository.EventStore.EventStoreDB.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra.Repository.Sql.MsSql\Zerra.Repository.Sql.MsSql.csproj" />
-    <ProjectReference Include="..\..\Framework\Zerra.Repository.Sql.PostgreSql\Zerra.Repository.Sql.PostgreSql.csproj" />
+    <ProjectReference Include="..\..\Framework\Zerra.Repository.EventStoreDB\Zerra.Repository.EventStoreDB.csproj" />
+    <ProjectReference Include="..\..\Framework\Zerra.Repository.MsSql\Zerra.Repository.MsSql.csproj" />
+    <ProjectReference Include="..\..\Framework\Zerra.Repository.PostgreSql\Zerra.Repository.PostgreSql.csproj" />
     <ProjectReference Include="..\..\Framework\Zerra.Repository\Zerra.Repository.csproj" />
+    <ProjectReference Include="..\..\Zerra.Repository.MySql\Zerra.Repository.MySql.csproj" />
     <ProjectReference Include="..\ZerraDemo.Domain.Ledger1\ZerraDemo.Domain.Ledger1.csproj" />
     <ProjectReference Include="..\ZerraDemo.Domain\ZerraDemo.Domain.csproj" />
   </ItemGroup>
