--- a/Framework/Zerra.Repository/Zerra.Repository.csproj
+++ b/Framework/Zerra.Repository/Zerra.Repository.csproj
@@ -22,11 +22,12 @@ Zerra.Repository.Update
 Zerra.Repository.DeleteByID
 Zerra.Repository.EventQueryMany
 Zerra.Repository.TemporalQueryMany
-Zerra.Repository.DataSourceEntityAttribute
-Zerra.Repository.DataSourceRelationAttribute
-Zerra.Repository.DataSourcePropertyAttribute
-Zerra.Repository.DataSourceTypeAttribute
-Zerra.Repository.IdentityAttribute</Description>
+Zerra.Repository.EntityAttribute
+Zerra.Repository.RelationAttribute
+Zerra.Repository.PropertyAttribute
+Zerra.Repository.StorePropertiesAttribute
+Zerra.Repository.IdentityAttribute
+Zerra.Repository.ApplyEntityAttribute</Description>
     <Company>KaKush LLC</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM</PackageTags>
