Kafka and Event Messaging

--- a/Demo/ZerraDemo.Common/cqrssettings.json
+++ b/Demo/ZerraDemo.Common/cqrssettings.json
@@ -1,5 +1,5 @@
 {
-  "MessageHost": "",
+  "MessageHost": "localhost",
   "RelayUrl": "localhost:9999",
   "RelayKey": "NL7tS9qddItOUHgjDneK3J9yoAkpvMhAcdeXQz7Xb6StvxcCAtJpm",
   "Services": [
