--- a/Demo/ZerraDemo.Common/ZerraDemo.Common.csproj
+++ b/Demo/ZerraDemo.Common/ZerraDemo.Common.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Framework\Zerra.CQRS.Kafka\Zerra.CQRS.Kafka.csproj" />
+    <ProjectReference Include="..\..\Framework\Zerra.CQRS.RabbitMQ\Zerra.CQRS.RabbitMQ.csproj" />
     <ProjectReference Include="..\..\Framework\Zerra.Logger\Zerra.Logger.csproj" />
     <ProjectReference Include="..\..\Framework\Zerra\Zerra.csproj" />
   </ItemGroup>
