--- a/Demo/ZerraDemo.Service.Pets/ZerraDemo.Service.Pets.csproj
+++ b/Demo/ZerraDemo.Service.Pets/ZerraDemo.Service.Pets.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Framework\Zerra.CQRS.RabbitMessage\Zerra.CQRS.RabbitMessage.csproj" />
+    <ProjectReference Include="..\..\Framework\Zerra.CQRS.RabbitMQ\Zerra.CQRS.RabbitMQ.csproj" />
     <ProjectReference Include="..\..\Framework\Zerra.Logger\Zerra.Logger.csproj" />
     <ProjectReference Include="..\..\Framework\Zerra\Zerra.csproj" />
     <ProjectReference Include="..\ZerraDemo.Domain.Pets.Sql\ZerraDemo.Domain.Pets.Sql.csproj" />
