--- a/Framework/Zerra.CQRS.RabbitMQ/Zerra.CQRS.RabbitMQ.csproj
+++ b/Framework/Zerra.CQRS.RabbitMQ/Zerra.CQRS.RabbitMQ.csproj
@@ -11,8 +11,8 @@
     <Description>RabbitMQ implementations of client and server for commands and events in the CQRS Zerra Framework. 
 
 Commonly used types:
-Zerra.CQRS.RabbitMessage.RabbitMessageClient
-Zerra.CQRS.RabbitMessage.RabbitMessageServer</Description>
+Zerra.CQRS.RabbitMQ.RabbitMQClient
+Zerra.CQRS.RabbitMQ.RabbitMQServer</Description>
     <Company>KaKush LLC</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, RabbitMQ</PackageTags>
