--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -75,16 +75,6 @@ services:
   zerrademo-weatherdomain:
     image: szawaski/zerrademo-weatherdomain
     environment:
-      - ZerraDemo.Service.Pets=host.docker.internal:9001
-      - ZerraDemo.Service.Weather=host.docker.internal:9002
-      - ZerraDemo.Service.Ledger1=host.docker.internal:9003
-      - ZerraDemo.Service.Ledger2=host.docker.internal:9004
-      #- PetsSqlConnectionStringMSSQL=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
-      #- Ledger1SqlConnectionStringMSSQL=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
-      - PetsSqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1401;Database=zerrademopets;
-      - Ledger1SqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1402;Database=zerrademoledger;
-      - Ledger1EventStoreServer=tcp://host.docker.internal:2113
-      - Ledger2EventStoreServer=tcp://host.docker.internal:2114
       - LogFileDirectory=
     build:
       context: ../
@@ -95,16 +85,9 @@ services:
   zerrademo-petsdomain:
     image: szawaski/zerrademo-petsdomain
     environment:
-      - ZerraDemo.Service.Pets=host.docker.internal:9001
       - ZerraDemo.Service.Weather=host.docker.internal:9002
-      - ZerraDemo.Service.Ledger1=host.docker.internal:9003
-      - ZerraDemo.Service.Ledger2=host.docker.internal:9004
-      #- PetsSqlConnectionStringMSSQL=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
-      #- Ledger1SqlConnectionStringMSSQL=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
+      - PetsSqlConnectionStringMSSQL=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
       - PetsSqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1401;Database=zerrademopets;
-      - Ledger1SqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1402;Database=zerrademoledger;
-      - Ledger1EventStoreServer=tcp://host.docker.internal:2113
-      - Ledger2EventStoreServer=tcp://host.docker.internal:2114
       - LogFileDirectory=
     build:
       context: ../
@@ -115,16 +98,9 @@ services:
   zerrademo-ledger1domain:
     image: szawaski/zerrademo-ledger1domain
     environment:
-      - ZerraDemo.Service.Pets=host.docker.internal:9001
-      - ZerraDemo.Service.Weather=host.docker.internal:9002
-      - ZerraDemo.Service.Ledger1=host.docker.internal:9003
-      - ZerraDemo.Service.Ledger2=host.docker.internal:9004
-      #- PetsSqlConnectionStringMSSQL=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
-      #- Ledger1SqlConnectionStringMSSQL=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
-      - PetsSqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1401;Database=zerrademopets;
+      - Ledger1SqlConnectionStringMSSQL=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
       - Ledger1SqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1402;Database=zerrademoledger;
       - Ledger1EventStoreServer=tcp://host.docker.internal:2113
-      - Ledger2EventStoreServer=tcp://host.docker.internal:2114
       - LogFileDirectory=
     build:
       context: ../
@@ -135,15 +111,6 @@ services:
   zerrademo-ledger2domain:
     image: szawaski/zerrademo-ledger2domain
     environment:
-      - ZerraDemo.Service.Pets=host.docker.internal:9001
-      - ZerraDemo.Service.Weather=host.docker.internal:9002
-      - ZerraDemo.Service.Ledger1=host.docker.internal:9003
-      - ZerraDemo.Service.Ledger2=host.docker.internal:9004
-      #- PetsSqlConnectionStringMSSQL=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
-      #- Ledger1SqlConnectionStringMSSQL=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
-      - PetsSqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1401;Database=zerrademopets;
-      - Ledger1SqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1402;Database=zerrademoledger;
-      - Ledger1EventStoreServer=tcp://host.docker.internal:2113
       - Ledger2EventStoreServer=tcp://host.docker.internal:2114
       - LogFileDirectory=
     build:
@@ -159,12 +126,6 @@ services:
       - ZerraDemo.Service.Weather=host.docker.internal:9002
       - ZerraDemo.Service.Ledger1=host.docker.internal:9003
       - ZerraDemo.Service.Ledger2=host.docker.internal:9004
-      #- PetsSqlConnectionStringMSSQL=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
-      #- Ledger1SqlConnectionStringMSSQL=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
-      - PetsSqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1401;Database=zerrademopets;
-      - Ledger1SqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1402;Database=zerrademoledger;
-      - Ledger1EventStoreServer=tcp://host.docker.internal:2113
-      - Ledger2EventStoreServer=tcp://host.docker.internal:2114
       - LogFileDirectory=
     build:
       context: ../
