--- a/Deployment/deployment.yaml
+++ b/Deployment/deployment.yaml
@@ -353,7 +353,8 @@ spec:
     spec:
       containers:
       - name: zerrademo-petsdomain-container
-        image: szawaski/zerrademo-petsdomain:latest
+        image: szawaski/zerrademo-petsdomain
+        imagePullPolicy: Never
         env:
           - name: ZerraDemo.Service.Weather
             value: "http://zerrademo-weatherdomain-service:9002"
@@ -361,6 +362,8 @@ spec:
 #            value: "Data Source=zerrademo-petsdomain-mssql-service,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;"
           - name: PetsSqlConnectionStringPOSTGRESQL
             value: "User ID=postgres;Password=password123;Host=zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademopets;"
+          - name: MessageHost
+            value: my-cluster-kafka-external-bootstrap.kafka:31340
           - name: LogFileDirectory
             value: 
         resources:
@@ -387,8 +390,11 @@ spec:
     spec:
       containers:
       - name: zerrademo-weatherdomain-container
-        image: szawaski/zerrademo-weatherdomain:latest
+        image: szawaski/zerrademo-weatherdomain
+        imagePullPolicy: Never
         env:
+          - name: MessageHost
+            value: my-cluster-kafka-external-bootstrap.kafka:31340
           - name: LogFileDirectory
             value: 
         resources:
@@ -415,7 +421,8 @@ spec:
     spec:
       containers:
       - name: zerrademo-ledger1domain-container
-        image: szawaski/zerrademo-ledger1domain:latest
+        image: szawaski/zerrademo-ledger1domain
+        imagePullPolicy: Never
         env:
 #         - name: Ledger1SqlConnectionStringMSSQL
 #           value: "Data Source=zerrademo-ledger1domain-mssql-service,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;"
@@ -423,6 +430,8 @@ spec:
             value: "User ID=postgres;Password=password123;Host=zerrademo-petsdomain-postgresql-service;Port=1402;Database=zerrademoledger;"
           - name: Ledger1EventStoreServer
             value: "tcp://zerrademo-ledger1domain-eventstore-service:2113"
+          - name: MessageHost
+            value: my-cluster-kafka-external-bootstrap.kafka:31340
           - name: LogFileDirectory
             value: 
         resources:
@@ -449,10 +458,13 @@ spec:
     spec:
       containers:
       - name: zerrademo-ledger2domain-container
-        image: szawaski/zerrademo-ledger2domain:latest
+        image: szawaski/zerrademo-ledger2domain
+        imagePullPolicy: Never
         env:
           - name: Ledger2EventStoreServer
             value: "tcp://zerrademo-ledger2domain-eventstore-service:2114"
+          - name: MessageHost
+            value: my-cluster-kafka-external-bootstrap.kafka:31340
           - name: LogFileDirectory
             value: 
         resources:
@@ -479,7 +491,8 @@ spec:
     spec:
       containers:
       - name: zerrademo-web-container
-        image: szawaski/zerrademo-web:latest
+        image: szawaski/zerrademo-web
+        imagePullPolicy: Never
         env:
           - name: ZerraDemo.Service.Pets
             value: "http://zerrademo-petsdomain-service:9001"
@@ -489,6 +502,8 @@ spec:
             value: "http://zerrademo-ledger1domain-service:9003"
           - name: ZerraDemo.Service.Ledger2
             value: "http://zerrademo-ledger2domain-service:9004"
+          - name: MessageHost
+            value: my-cluster-kafka-external-bootstrap.kafka:31340
           - name: LogFileDirectory
             value: 
         resources:
