--- a/Demo/ZerraDemo.Web/Properties/launchSettings.json
+++ b/Demo/ZerraDemo.Web/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:7001",
-      "sslPort": 44349
+      "applicationUrl": "http://localhost:64936/",
+      "sslPort": 44330
     }
   },
   "profiles": {
