--- a/Framework/Zerra.Identity/Zerra.Identity.csproj
+++ b/Framework/Zerra.Identity/Zerra.Identity.csproj
@@ -19,10 +19,10 @@ Zerra.Identity.Consumers.Saml2IdentityConsumer
 	  </Description>
 	  <Company>KaKush LLC</Company>
 	  <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
-	  <Version>0.5.0</Version>
+	  <Version>0.6.0</Version>
 	  <SignAssembly>false</SignAssembly>
-	  <AssemblyVersion>0.5.0.0</AssemblyVersion>
-	  <FileVersion>0.5.0.0</FileVersion>
+	  <AssemblyVersion>0.6.0.0</AssemblyVersion>
+	  <FileVersion>0.6.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -41,6 +41,10 @@ Zerra.Identity.Consumers.Saml2IdentityConsumer
 			<Pack>True</Pack>
 			<PackagePath></PackagePath>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Zerra\Zerra.csproj" />
 	</ItemGroup>
 
 </Project>
