Identity - Abstract Out HttpContext

--- a/Framework/Zerra.Identity/Zerra.Identity.csproj
+++ b/Framework/Zerra.Identity/Zerra.Identity.csproj
@@ -1,40 +1,44 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>net6.0;net5.0;netstandard2.1;netstandard2.0</TargetFrameworks>
-	  <Authors>Steven Zawaski</Authors>
-	  <Copyright>KaKush LLC</Copyright>
-	  <Product>Zerra Framework</Product>
-	  <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-	  <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-	  <LangVersion>8.0</LangVersion>
-	  <PackageTags>Identity Management, SSO, SAML, OAuth, OpenID</PackageTags>
-	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	  <Description>Identity Sign-On and Servers.
+	<PropertyGroup>
+		<TargetFrameworks>net6.0;net5.0;netstandard2.1;netstandard2.0;net48</TargetFrameworks>
+		<Authors>Steven Zawaski</Authors>
+		<Copyright>KaKush LLC</Copyright>
+		<Product>Zerra Framework</Product>
+		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+		<LangVersion>8.0</LangVersion>
+		<PackageTags>Identity Management, SSO, SAML, OAuth, OpenID</PackageTags>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Description>
+			Identity Sign-On and Servers.
 
-Commonly used types:
-Zerra.Identity.Consumers.OpenIDIdentityConsumer
-Zerra.Identity.Consumers.OAuth2IdentityConsumer
-Zerra.Identity.Consumers.Saml2IdentityConsumer
-	  </Description>
-	  <Company>KaKush LLC</Company>
-	  <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
-	  <Version>0.6.0</Version>
-	  <SignAssembly>false</SignAssembly>
-	  <AssemblyVersion>0.6.0.0</AssemblyVersion>
-	  <FileVersion>0.6.0.0</FileVersion>
-  </PropertyGroup>
+			Commonly used types:
+			Zerra.Identity.Consumers.OpenIDIdentityConsumer
+			Zerra.Identity.Consumers.OAuth2IdentityConsumer
+			Zerra.Identity.Consumers.Saml2IdentityConsumer
+		</Description>
+		<Company>KaKush LLC</Company>
+		<RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
+		<Version>0.6.0</Version>
+		<SignAssembly>false</SignAssembly>
+		<AssemblyVersion>0.6.0.0</AssemblyVersion>
+		<FileVersion>0.6.0.0</FileVersion>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="Jwt\JwtManager.cs" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="Jwt\JwtManager.cs" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="System.Security.Cryptography.Xml" Version="5.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="System.Security.Cryptography.Xml" Version="5.0.0" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' != 'net48'">
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<None Include="..\..\LICENSE.txt">
@@ -44,7 +48,7 @@ Zerra.Identity.Consumers.Saml2IdentityConsumer
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Zerra\Zerra.csproj" />
+		<ProjectReference Include="..\Zerra\Zerra.csproj" />
 	</ItemGroup>
 
 </Project>
