--- a/Framework/Zerra.CQRS.Kafka/Zerra.CQRS.Kafka.csproj
+++ b/Framework/Zerra.CQRS.Kafka/Zerra.CQRS.Kafka.csproj
@@ -10,6 +10,7 @@
     <Description>Kafka implementations of client and server for commands and events in the CQRS Zerra Framework.</Description>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
