--- a/Framework/Zerra.Repository.EventStoreDB/Zerra.Repository.EventStoreDB.csproj
+++ b/Framework/Zerra.Repository.EventStoreDB/Zerra.Repository.EventStoreDB.csproj
@@ -17,6 +17,9 @@ Zerra.Repository.EventStore.EventStoreDB.EventStoreDBProvider</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, EventStore</PackageTags>
     <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
+    <Version>2.0.0</Version>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
