--- a/Framework/Zerra.Repository.MsSql/Zerra.Repository.MsSql.csproj
+++ b/Framework/Zerra.Repository.MsSql/Zerra.Repository.MsSql.csproj
@@ -16,6 +16,7 @@ Zerra.Repository.MsSql.MsSqlDataContext</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, SQL</PackageTags>
     <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
