--- a/Framework/Zerra.Identity/Zerra.Identity.csproj
+++ b/Framework/Zerra.Identity/Zerra.Identity.csproj
@@ -20,10 +20,10 @@
 		</Description>
 		<Company>KaKush LLC</Company>
 		<RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
-		<Version>0.6.1</Version>
+		<Version>0.7.0</Version>
 		<SignAssembly>false</SignAssembly>
-		<AssemblyVersion>0.6.1.0</AssemblyVersion>
-		<FileVersion>0.6.1.0</FileVersion>
+		<AssemblyVersion></AssemblyVersion>
+		<FileVersion></FileVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
