--- a/Framework/Zerra.Web/Zerra.Web.csproj
+++ b/Framework/Zerra.Web/Zerra.Web.csproj
@@ -17,6 +17,7 @@ Zerra.Web.ZerraLogger
 Zerra.Web.CheckBoxList</Description>
     <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
     <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, ASPNET, Web</PackageTags>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
