--- a/Framework/Zerra.CQRS.RabbitMQ/Zerra.CQRS.RabbitMQ.csproj
+++ b/Framework/Zerra.CQRS.RabbitMQ/Zerra.CQRS.RabbitMQ.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;net5.0;net6.0</TargetFrameworks>
     <Authors>Steven Zawaski</Authors>
     <Copyright>KaKush LLC</Copyright>
     <Product>Zerra Framework CQRS Rabbit Message</Product>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <LangVersion>8.0</LangVersion>
-    <Description>RabbitMQ implementations of client and server for commands and events in the CQRS Zerra Framework. 
+    <Description>RabbitMQ implementations of producer and consumer for commands and events in the CQRS Zerra Framework. 
 
 Commonly used types:
 Zerra.CQRS.RabbitMQ.RabbitMQClient
@@ -17,7 +17,7 @@ Zerra.CQRS.RabbitMQ.RabbitMQServer</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, RabbitMQ</PackageTags>
     <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
-    <Version>2.1.0</Version>
+	<Version>3.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
