--- a/Framework/Zerra.CQRS.AzureEventHub/Zerra.CQRS.AzureEventHub.csproj
+++ b/Framework/Zerra.CQRS.AzureEventHub/Zerra.CQRS.AzureEventHub.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;net5.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>net5.0;net6.0</TargetFrameworks>
 		<Authors>Steven Zawaski</Authors>
 		<Product>KaKush LLC</Product>
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-		<PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, Kafka</PackageTags>
+		<PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, Azure Event Hub</PackageTags>
 		<RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
-		<Description>Azure Event Service implementations of producer and consumer for commands and events in the CQRS Zerra Framework.</Description>
+		<Description>Azure Event Hub implementations of producer and consumer for commands and events in the CQRS Zerra Framework.</Description>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Version>3.0.0</Version>
