--- a/Framework/Zerra.CQRS.AzureEventHub/Zerra.CQRS.AzureEventHub.csproj
+++ b/Framework/Zerra.CQRS.AzureEventHub/Zerra.CQRS.AzureEventHub.csproj
@@ -22,6 +22,8 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Azure.Messaging.EventHubs" Version="5.6.2" />
+	  <PackageReference Include="Microsoft.Azure.Management.EventHub" Version="5.0.0" />
+	  <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.9" />
 	</ItemGroup>
 
 	<ItemGroup>
