--- a/Framework/Zerra/Zerra.csproj
+++ b/Framework/Zerra/Zerra.csproj
@@ -29,6 +29,7 @@ Zerra.Reflection.TypeAnalyzer
 		<Company>KaKush LLC</Company>
 		<RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
 		<Version>3.0.0</Version>
+		<LangVersion>10.0</LangVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
