--- a/Demo/ZerraDemo.Common/ZerraDemo.Common.csproj
+++ b/Demo/ZerraDemo.Common/ZerraDemo.Common.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Framework\Zerra.CQRS.AzureEventHub\Zerra.CQRS.AzureEventHub.csproj" />
+    <ProjectReference Include="..\..\Framework\Zerra.CQRS.AzureServiceBus\Zerra.CQRS.AzureServiceBus.csproj" />
     <ProjectReference Include="..\..\Framework\Zerra.CQRS.Kafka\Zerra.CQRS.Kafka.csproj" />
     <ProjectReference Include="..\..\Framework\Zerra.CQRS.RabbitMQ\Zerra.CQRS.RabbitMQ.csproj" />
     <ProjectReference Include="..\..\Framework\Zerra.Logger\Zerra.Logger.csproj" />
