--- a/Framework/Zerra.T4/Zerra.T4.csproj
+++ b/Framework/Zerra.T4/Zerra.T4.csproj
@@ -13,6 +13,8 @@
     <Description>Tools for T4 files to use to generate code and client side libraries for CQRS.</Description>
     <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, T4, Code Generation</PackageTags>
     <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
+	<Version>3.0.0</Version>
+	<LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
