Testing Messaging Service by Environments

--- a/Demo/ZerraDemo.Service.Ledger1/Properties/launchSettings.json
+++ b/Demo/ZerraDemo.Service.Ledger1/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "ZerraDemo.Service.Pets": {
+    "ZerraDemo.Service.Ledger1": {
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Dev"
