--- a/Demo/ZerraDemo.Service.Ledger2/Properties/launchSettings.json
+++ b/Demo/ZerraDemo.Service.Ledger2/Properties/launchSettings.json
@@ -1,7 +1,10 @@
 {
   "profiles": {
     "ZerraDemo.Service.Ledger2": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Dev"
+      }
     }
   }
 }
