--- a/Demo/ZerraDemo.Common/appsettings.json
+++ b/Demo/ZerraDemo.Common/appsettings.json
@@ -7,5 +7,11 @@
   "Ledger1SqlConnectionStringMYSQL": "Server=localhost;Port=3306;Uid=root;Pwd=password123;Database=ZerraDemoLedger",
   "Ledger1EventStoreServer": "tcp://localhost:2113",
   "Ledger2EventStoreServer": "tcp://localhost:2113",
-  "LogFileDirectory": "C:\\Temp"
+  "LogFileDirectory": "C:\\Temp",
+
+  "Disable-EventHubResourceGroup": "",
+  "Disable-EventHubTenantId": "",
+  "Disable-AzureEventHubApplicationId": "",
+  "Disable-AzureEventHubClientSecret": "",
+  "Disable-AzureEventHubSubscriptionId": ""
 }
