--- a/Demo/ZerraDemo.Common/appsettings.json
+++ b/Demo/ZerraDemo.Common/appsettings.json
@@ -1,12 +1,17 @@
 {
+  "AuthenticationKey": "TestKeyForHttp",
+
   "PetsSqlConnectionStringMSSQL": "Data Source=.;Initial Catalog=ZerraDemoPets;Integrated Security=true",
   "PetsSqlConnectionStringPOSTGRESQL": "User ID=postgres;Password=password123;Host=localhost;Port=5432;Database=zerrademopets;",
   "PetsSqlConnectionStringMYSQL": "Server=localhost;Port=3306;Uid=root;Pwd=password123;Database=ZerraDemoPets",
+
   "Ledger1SqlConnectionStringMSSQL": "Data Source=.;Initial Catalog=ZerraDemoLedger;Integrated Security=true",
   "Ledger1SqlConnectionStringPOSTGRESQL": "User ID=postgres;Password=password123;Host=localhost;Port=5432;Database=zerrademoledger;",
   "Ledger1SqlConnectionStringMYSQL": "Server=localhost;Port=3306;Uid=root;Pwd=password123;Database=ZerraDemoLedger",
+
   "Ledger1EventStoreServer": "tcp://localhost:2113",
   "Ledger2EventStoreServer": "tcp://localhost:2113",
+
   "LogFileDirectory": "C:\\Temp",
 
   "Disable-EventHubResourceGroup": "",
