--- a/Framework/Zerra.CQRS.RabbitMQ/Zerra.CQRS.RabbitMQ.csproj
+++ b/Framework/Zerra.CQRS.RabbitMQ/Zerra.CQRS.RabbitMQ.csproj
@@ -8,11 +8,7 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <LangVersion>8.0</LangVersion>
-    <Description>RabbitMQ implementations of producer and consumer for commands and events in the CQRS Zerra Framework. 
-
-Commonly used types:
-Zerra.CQRS.RabbitMQ.RabbitMQClient
-Zerra.CQRS.RabbitMQ.RabbitMQServer</Description>
+    <Description>RabbitMQ implementations of producer and consumer for commands and events in the CQRS Zerra Framework.</Description>
     <Company>KaKush LLC</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, RabbitMQ</PackageTags>
