--- a/Framework/Zerra.CQRS.RabbitMQ/Zerra.CQRS.RabbitMQ.csproj
+++ b/Framework/Zerra.CQRS.RabbitMQ/Zerra.CQRS.RabbitMQ.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net5.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;net5.0;net6.0;net7.0</TargetFrameworks>
     <Authors>Steven Zawaski</Authors>
     <Copyright>KaKush LLC</Copyright>
     <Product>Zerra Framework CQRS Rabbit Message</Product>
@@ -12,8 +12,8 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, RabbitMQ</PackageTags>
     <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
-    <LangVersion>10.0</LangVersion>  
-	<Version>4.0.0</Version>
+    <LangVersion>10.0</LangVersion>
+    <Version>4.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
