--- a/Framework/Zerra.Logger/Zerra.Logger.csproj
+++ b/Framework/Zerra.Logger/Zerra.Logger.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0;net6.0;net7.0</TargetFrameworks>
     <Authors>Steven Zawaski</Authors>
     <Copyright>KaKush LLC</Copyright>
     <Product>Zerra Framework</Product>
@@ -13,7 +13,7 @@
     <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
     <Description>Basic Console and File Logging for the Zerra Framework for a quick start.  Ideally replaced with a custom implementation of ILoggingProvider and IMessageLogger later on.</Description>
     <LangVersion>10.0</LangVersion>
-	<Version>4.0.0</Version>
+	<Version>4.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
