--- a/Framework/Zerra.Repository.MsSql/Zerra.Repository.MsSql.csproj
+++ b/Framework/Zerra.Repository.MsSql/Zerra.Repository.MsSql.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0;net6.0;net7.0</TargetFrameworks>
     <Authors>Steven Zawaski</Authors>
     <Copyright>KaKush LLC</Copyright>
     <Product>Zerra Framework Repository Sql</Product>
@@ -16,7 +16,7 @@ Zerra.Repository.MsSql.MsSqlDataContext</Description>
     <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, SQL</PackageTags>
     <RepositoryUrl>https://github.com/szawaski/Zerra</RepositoryUrl>
     <LangVersion>10.0</LangVersion>
-	<Version>4.0.4</Version>
+	<Version>4.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
