--- a/Framework/Zerra.Web/Zerra.Web.csproj
+++ b/Framework/Zerra.Web/Zerra.Web.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0;net6.0;net7.0</TargetFrameworks>
       <Authors>Steven Zawaski</Authors>
       <Copyright>KaKush LLC</Copyright>
       <Product>Zerra Framework Repository Sql</Product>
@@ -17,7 +17,7 @@ Zerra.Web.CheckBoxList</Description>
     <PackageTags>Framework, CQRS, Microservice, Event Sourcing, Repository, ORM, ASPNET, Web</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <LangVersion>10.0</LangVersion>
-    <Version>4.0.0</Version>
+    <Version>4.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
